--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^7.6.3"
+    "mongoose": "^7.6.3",
+    "morgan": "^1.10.0",
+    "nodemailer": "^6.9.7",
+    "slugify": "^1.6.6"
   }
 }
